Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.15
-
Fix Version/s: 10.1.15
-
Component/s: Character Sets
-
Labels:None
Description
The recently added xxx_thai_520_w2 collations return a wrong implicit weights on the secondary level.
Example:
SELECT HEX(WEIGHT_STRING(_ucs2 0xF001 COLLATE ucs2_thai_520_w2)); |
+-----------------------------------------------------------+
|
| HEX(WEIGHT_STRING(_ucs2 0xF001 COLLATE ucs2_thai_520_w2)) |
|
+-----------------------------------------------------------+
|
| FBC1F001FBC1F001 |
|
+-----------------------------------------------------------+
|
1 row in set (0.00 sec)
|
Notice, the character 0xF001 is not in DUCET, it's weight is generated algorithmically.
It's primary weight is correctly calculated as FBC1F001.
It's secondary weight must be 0020.
The expected result must be: FBC1F0010020
The secondary weight is calculated as FBC1F001 rather than 0020.