MDEV-10262 ucs2_thai_520_w2: wrong implicit weights on the secondary level